made cotact section work, fixed hero icons not centered

--- a/css/main.scss
+++ b/css/main.scss
@@ -103,13 +103,15 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+
     li {
         list-style: none;
   }
 
   a {
     display: inline-block;
-    margin-right: 3em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
     filter: invert(1);
     transform: scale(2);
     transition: 0.5s;
